[package]
name = "exp_jit"
version = "0.1.0"
authors = ["Dm. Yakushev <rig410@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
byteorder = "*"
hex = "*"
#https://users.rust-lang.org/t/function-pointers-and-raw-function-pointers/15152/12
